fix(components): Handling header children positions on mobile

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,20 +1,32 @@
 .headerContainer {
-  height: 5rem;
   border-bottom: 1px solid var(--gray-800);
+
+  @media screen and (min-width: 768px) {
+    height: 5rem;
+  }
 }
 
 .headerContent {
   max-width: 1120px;
-  height: 5rem;
   margin: 0 auto;
-  padding: 0 2rem;
+  padding: 2rem;
 
   display: flex;
   align-items: center;
+  flex-direction: column;
+
+  @media screen and (min-width: 768px) {
+    height: 5rem;
+    padding: 0 2rem;
+    flex-direction: row;
+  }
 
   nav {
-    margin-left: 5rem;
     height: 5rem;
+
+    @media screen and (min-width: 768px) {
+      margin-left: 5rem;
+    }
 
     a {
       display: inline-block;
@@ -53,6 +65,10 @@
   }
 
    button {
-     margin-left: auto;
+     margin: 2rem 0 0;
+
+     @media screen and (min-width: 768px) {
+       margin: 0 0 0 auto;
+     }
    }
 }
